--- a/cems.API/wwwroot/index.html
+++ b/cems.API/wwwroot/index.html
@@ -7,8 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.5576cedb54ebab812c65.css"></head>
+<link rel="stylesheet" href="styles.23f1437008ccaea816cc.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2f4a59095805af02bd79.js"></script><script type="text/javascript" src="main.21326a05966fe6f527a5.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.f8bea440aac573c30541.js"></script><script type="text/javascript" src="scripts.11ea4138a8dec3b651be.js"></script><script type="text/javascript" src="main.6f83f38c851bfc6b3c37.js"></script></body>
 </html>
