--- a/cems.API/wwwroot/index.html
+++ b/cems.API/wwwroot/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>CemsSPA</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>cems</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.23f1437008ccaea816cc.css"></head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.e40f047aeca65163fcfa.css"></head>
 <body>
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.f8bea440aac573c30541.js"></script><script type="text/javascript" src="scripts.11ea4138a8dec3b651be.js"></script><script type="text/javascript" src="main.6f83f38c851bfc6b3c37.js"></script></body>
+<app-root></app-root>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.716a2704f187c0dcca22.js"></script><script type="text/javascript" src="scripts.11ea4138a8dec3b651be.js"></script><script type="text/javascript" src="main.36773ebe9b9cb13ed57f.js"></script></body>
 </html>
